--- a/userguides.html
+++ b/userguides.html
@@ -431,7 +431,7 @@
           <li> <button onclick="location.href = 'https://manager.galaxkey.com/downloads';">Galaxkey Client</button></li>
           <li><button onclick="location.href = 'https://www.galaxkey.com/datasheets/';">Datasheets</button></li>
           <li><button onclick="location.href = 'https://www.galaxkey.com/case-studies/';">Case Studies</button></li>
-          <li><button onclick="location.href = 'userguides.html';">User Guide</button></li>
+          <li><button onclick="location.href = '#';">User Guide</button></li>
         </ul>
       </div>
       <button onclick="location.href = 'logout.php';">Logout</button>
@@ -442,27 +442,21 @@
 
           <div class="videos">
             <div class="email_demo">
-              <h3>Email Encryption</h3>
-              <video src="./demo_videos/Secure Email Demo.mp4"controls >
-                  Your browser does not support video files. Please change your browser.
-              </video>
+              <h1>PDF Example 1</h1>
+            <p>Email Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+
             </div>
             <div class="files_demo">
-              <h3>File and Folders Encryption</h3>
-              <video src="./demo_videos/File Security demo.mp4" controls >
-              </video>
-            </div>
-            <div class="workspace_demo">
-              <h3>Secure Workspace</h3>
-              <video src="./demo_videos/Secure Workspace Demo.mp4"  controls>
-              </video>
+              <h1>PDF Example 2</h1>
+            <p>Files Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+          </div>
+          <div class="workspace_demo">
+            <p>Workspace Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
             </div>
             <div class="digital_sign">
-              <h3>Secure Digital Document Signing</h3>
-              <video src="./demo_videos/Digital Document Signing demo.mp4"controls >
-              </video>
-            </div>
-          </div>
+              <p>Digital Sign Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+              </div>
+        </div>
         </div>
 
 
@@ -492,12 +486,16 @@
                             </div>
                             <div class="col item social"><a href="https://en-gb.facebook.com/galaxkey/"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/galaxkey"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/company/galaxkey-limited/"><i class="icon ion-social-linkedin"></i></a></div>
                         </div>
-                        <p class="copyright">Galaxkey Limited © All rights reserved.</p>
+                        <p class="copyright">Galaxkey Limited © All rights reserved. </p>
                     </div>
+
                 </footer>
-                </div>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
+              </div>
+
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+              <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
 
 
   </body>
