Table in backend approval, notifs page and buttons css with responsive

--- a/adminportal.html
+++ b/adminportal.html
@@ -158,6 +158,13 @@
     align-items: center;
   }
 
+  h1, p, #output{width:100%;text-align:center;}
+
+#output{min-height:50px;}
+
+input, button{padding:4px 12px;border-radius:6px;outline:none;border:1px solid #888;text-align:center;margin:4px}
+
+
   </style>
 
   <div class="nav-bar">
