--- a/userguides.html
+++ b/userguides.html
@@ -446,20 +446,39 @@
 
           <div class="videos">
             <div class="email_demo">
-              <h1>PDF Example 1</h1>
-            <p>Email Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+              <h1>Email Security</h1>
+            <p>Email Security Guide: </p><iframe src="./userguides/Fact Sheet - Email Security.pdf" width="100%" height="500px"></iframe>
 
             </div>
             <div class="files_demo">
-              <h1>PDF Example 2</h1>
-            <p>Files Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+              <h1>File and storage</h1>
+            <p>Secure File and Storage Fact Sheet </p><iframe src="./userguides/Fact Sheet - Secure File Storage and Sharing.pdf" width="100%" height="500px"></iframe>
           </div>
           <div class="workspace_demo">
-            <p>Workspace Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+              <h1>Workspace Security</h1>
+            <p>Workspace Security Fact Sheet: </p><iframe src="./userguides/Fact Sheet - Secure Workspace.pdf" width="100%" height="500px"></iframe>
             </div>
             <div class="digital_sign">
-              <p>Digital Sign Security User Guide: </p><iframe src="./userguides/BITS PS Devansh.pdf" width="100%" height="500px"></iframe>
+              <h1>Digital Sign and Security</h1>
+              <p>Digital Sign Security User Guide: </p><iframe src="./userguides/Simpliefied User Guide for DDS.pdf" width="100%" height="500px"></iframe>
               </div>
+
+              <div class="digital_sign">
+                <h1>Digital Sign and Security</h1>
+                <p>Digital Sign Security Fact Sheet:</p><iframe src="./userguides/Simplified USer Guide - Digital Document Sign.pdf" width="100%" height="500px"></iframe>
+                </div>
+
+              </div>
+              <div class="files_demo">
+                <h1>File and storage</h1>
+              <p>Secure File and Storage User Guide </p><iframe src="./userguides/Simplified User Guide - File Security.pdf" width="100%" height="500px"></iframe>
+            </div>
+
+            <div class="workspace_demo">
+                <h1>Workspace </h1>
+              <p>Workspace Security User Guide: </p><iframe src="./userguides/Simplified USer Guide - Secure Workspace.pdf" width="100%" height="500px"></iframe>
+              </div>
+
         </div>
         </div>
 
